fix: overflow scroll on body

--- a/src/styles/global/layout.scss
+++ b/src/styles/global/layout.scss
@@ -23,7 +23,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-behavior: smooth;
   font-weight: normal;
 }
